--- a/index.html
+++ b/index.html
@@ -446,6 +446,7 @@
     const CACHE_TTL_MS = 3600_000;
 
     const cities = {
+      "sinop": { name:"Sinop - Gerze", lat:41.7936, lon:35.1911, diyanet:"" },
       "sinop": { name:"Sinop", lat:42.026, lon:35.1517, diyanet:"" },
       "gerze": { name:"Gerze", lat:41.7936, lon:35.1911, diyanet:"" },
       "ankara": { name:"Ankara", lat:39.9208, lon:32.8541, diyanet:"" },
