--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@ function verse(){
     {
       s: "Mü'minûn",
       a: 9,
-      m: "Onlar ki, namazlarını kılmağa devam ederler."
+      m: "Onlar ki, namazlarını kılmaya devam ederler."
     },
     {
       s: "Şuarâ",
